tvix/nix-compat-derive/tests/ui/deserialize_from_missing.stderr
error[E0277]: the trait bound `Test: From<u64>` is not satisfied
 --> tests/ui/deserialize_from_missing.rs
  |
  | #[nix(crate = "nix_compat", from = "u64")]
  |                                    ^^^^^ the trait `From<u64>` is not implemented for `Test`
