tvix/nix-compat-derive/tests/ui/deserialize_from_missing.rs
use nix_compat::NixDeserialize;

#[derive(NixDeserialize)]
#[nix(crate = "nix_compat", from = "u64")]
pub struct Test;

fn main() {}
